branches/v1.0-dev/docs/6.0._Event_and_tally_rest_api.md
# Event & Tally REST API

_(c) AMWA 2018, CC Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)_

This document describes the use of the Event & Tally REST API.

Other sections can be accessed from the [Overview](1.0._Overview.md).

## 1. Introduction

The late joiners API is meant as a protocol agnostic means by which a consumer (receiver) can get in sync with the last known state of an event emitter. The API *has to be* used only together with other event based transports to minimize the load on the device allowing for better scalability. The main purpose of the API is resolving the problem of late joiners but it can be also used for low-frequency sanity checks of the states for signals that change states very rarely.
The API also allows for a consumer to find the type definition associated with a source event type.

## 2. NMOS Resource

The API will be hosted under an NMOS device in the `controls` array using the `urn:x-nmos:events:query` type.
For consistency the `href` url offered will always end with a trailing slash.

Example

```json
{
    "senders": [
        "a65c15a4-a52e-4960-8cd2-e05c31196e5f",
        "68f519a3-5523-4b2c-b72d-ec23cc80207d"
    ],
    "receivers": [
        "8a7bb1c1-4a82-4fd9-a4fb-96f68f560831",
        "ab450c07-ce54-44da-9ea9-c3e62e7b06d0"
    ],
    "controls": [
        {
            "type": "urn:x-nmos:control:sr-ctrl/v1.0",
            "href": "http://hostname/x-nmos/connection/v1.0/"
        },
        {
            "type": "urn:x-nmos:events:query/v1.0",
            "href": "http://hostname/x-nmos/events/v1.0/"
        }
    ],
    "tags": {},
    "type": "urn:x-nmos:device:generic",
    "label": "Events Device",
    "version": "1529676926:000000000",
    "node_id": "d1713110-7343-4d9e-b3f4-456c8f6ce765",
    "id": "58f6b536-ca4c-43fd-880a-9df2501fc125",
    "description": "Events Engine Device"
}
```

## 3. Usage

The api base will return the following path upon a successful Get request:

```json
[
    "sources/"
]
```

The api `sources/id` path will return the following upon a successful Get request

```json
[
    "state",
    "type"
]
```

The `state` path allows for consumers to retrieve the latest state of the source whereas the `type` path allows for the retrieval
of the type definition associated with the event type of the source.

Example of retrieving the `state` of a source:

`GET http://hostname/x-nmos/events/v1.0/sources/a65c15a4-a52e-4960-8cd2-e05c31196e5f/state`

Example response:  

```json
{
  "identity": {
    "source_id": "a65c15a4-a52e-4960-8cd2-e05c31196e5f"
  },
  "timing": {
    "creation_timestamp": "1529323551:016020406",
    "action_timestamp": "1529323551:100000000"
  },
  "event_type": "boolean",
  "payload": {
    "value": true
  }
}
```

Example of retrieving the `type` definition for a source:

`GET http://hostname/x-nmos/events/v1.0/sources/a65c15a4-a52e-4960-8cd2-e05c31196e5f/type`

Example response:  

```json
{
  "type": "boolean"
}
```

## 4. Cases to avoid

This API is only meant for consumer late joiners to synchronise with emitters and shall not be used for regular high intensity polling of states.
